[project]
name = "reachy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.1",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
]
